[package]
name = "iron-cms"
version = "0.2.11"
authors = ["Evgeny Ukhanov <mrlsd@ya.ru>"]
build = "build.rs"

[build-dependencies]
syntex = { version = "0.44.0", optional = true }
diesel_codegen_syntex = { version = "0.8.0", features = ["postgres"], optional = true }

[dependencies]
iron = "0.4.0"
router = "*"
handlebars-iron = "*"
rustc-serialize = "*"
time = "*"
staticfile = "*"
mount = "*"
maplit = "*"
handlebars = "*"
params = "*"
diesel = "0.8.1"
diesel_codegen = { version = "0.8.1", features = ["postgres"], optional = true }
dotenv = "0.8.0"

[[bin]]
name = "iron-cms"
doc = false

[features]
default = ["syntex", "diesel_codegen_syntex"]